# arm_vision

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: arm_vision.launch  vision.launch
msg/: ArucoPoses.msg  FoundArucos.msg
scripts/: arucoPanel3.py  arucoPanel_DEBUG.py  aruco_detector.py  aruco_detector_old.py  camera_template.py  detector_aruco.py  inquirer_aruco.py  lib_aruco.py  old.txt  panoramic3.py  referencer.py  referencer_aruco.py  roscamAruco3.py  roscamLibrary3.py
srv/: ErcAruco.srv  FoundMarker.srv  ReferenceAcquisition.srv
